--- a/roles/qbittorrent/tasks/main.yml
+++ b/roles/qbittorrent/tasks/main.yml
@@ -60,11 +60,11 @@
 - name: Create and start container
   docker_container:
     name: qbittorrent
-    image: sc4h/qbittorrent
+    image: hotio/qbittorrent
     pull: yes
     published_ports:
-      - "56881:56881"
-      - "56881:56881/udp"
+      - "8080:8080"
+      - "62334:62334"
     env:
       TZ: "{{ tz }}"
       PUID: "{{ uid }}"
